feat: all pages

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 GOOGLE_CLIENT_ID=278240816449-lca7q12vis6m0diq6j3ooj81n73nv0mv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
-NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_URL=http://localhost:3000
 
 JWT_SECRET=9baf097223b7e51df9225d58834f23c4
+
+NEXT_PUBLIC_URL=http://localhost:3000
